alignment fixes for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,6 @@ color:#999;
     .content .w50 img
     {
         border: #fff solid 10px;
-        margin-left:100px;
         transform: rotate(0deg);
         display:flex;
         position:relative;
@@ -554,9 +553,10 @@ color:#999;
     }
     .banner .shanImg
     {
-        border: #fff solid 15px;
-        border-bottom:#fff solid 40px;
+        border: #fff solid 8px;
+        border-bottom:#fff solid 16px;
         transform: rotate(0deg);
+        min-width: 35%;
         
     }
 }
